<resources>
    <!-- Application strings-->
    <string name="app_name">DemoBasicViews</string>

    <!-- EditTexts-->
    <string name="edit_text_username_hint">Input user name</string>
    <string name="edit_text_name_hint">Input your name</string>
    <string name="edit_text_email_hint">Input your email</string>
    <string name="edit_text_password_hint">Input password</string>
    <string name="edit_text_confirm_password_hint">Confirm password</string>
    <string name="edit_text_count_hint">Input user count</string>

    <!-- Buttons-->
    <string name="button_login_text">Login</string>
    <string name="button_close_text">Close</string>
    <string name="button_clear_text">Clear</string>
    <string name="button_register_text">Register</string>
    <string name="button_continue_text">Continue</string>
    <string name="button_load_text">Load</string>
    <string name="button_save_text">Save</string>
    <string name="button_users_text">Users</string>
    <string name="button_user_operations_text">User operations</string>
    <string name="button_load_users_text">Load Users</string>

    <!-- Prompts-->
    <string name="login_prompt">Login</string>
    <string name="close_prompt">Close</string>
    <string name="click_title_prompt">Input information to log in</string>
    <string name="continue_register_prompt">Continue register</string>
    <string name="username_missing_prompt">Username can not be empty</string>
    <string name="username_not_found_prompt">Username not found</string>
    <string name="user_saved_successfully_prompt">User saved successfully</string>
    <string name="user_loaded_successfully_prompt">User loaded successfully</string>
    <string name="user_registered_successfully_prompt">User registered successfully</string>
    <string name="user_already_registered_prompt">User already registered</string>
    <string name="data_problem_occurred_prompt">IO problem occurred</string>
    <string name="problem_occurred_prompt">Problem occurred</string>
    <string name="invalid_count_value_prompt">Invalid count value</string>
    <string name="value_must_be_positive_prompt">Value must be positive</string>

    <!-- TextViews-->
    <string name="text_view_login_title">Login</string>
    <string name="text_view_register_title">Register:%s</string>
    <string name="text_view_management_title">Management</string>
    <string name="text_view_register_password_title">Create password for %s</string>
    <string name="text_view_marital_status_title">Marital Status</string>
    <string name="text_view_last_education_degree_title">Last Education Degree</string>

    <!-- Switches-->
    <string name="switch_accept_text">Accept</string>

    <!-- Messages-->
    <string name="status_accepted_message">Accepted</string>
    <string name="status_not_accepted_message">Not accepted</string>

    <!-- ToggleButtons-->
    <string name="toggle_visible_text_on">Close Login</string>
    <string name="toggle_visible_text_off">Open Login</string>

    <!-- Checkboxes-->
    <string name="checkbox_anonymous_text">Anonymous</string>

    <!-- RadioButtons and RadioGroups-->
    <string name="radiobutton_last_education_degree_primary">Primary</string>
    <string name="radiobutton_last_education_degree_secondary">Secondary</string>
    <string name="radiobutton_last_education_degree_bachelor">Bachelor</string>
    <string name="radiobutton_last_education_degree_master">Master</string>
    <string name="radiobutton_last_education_degree_phd">PhD</string>

    <!-- AlertDialogs-->

    <string name="alert_dialog_close_title">Alert</string>
    <string name="alert_dialog_close_message">Save data?</string>
    <string name="alert_dialog_save">Save</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_close_close">Close</string>
    <string name="alert_dialog_confirm_password_title">Confirm Password</string>
    <string name="alert_dialog_confirm_password_message">You must confirm Password</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_user_already_saved_title">Username already saved</string>
    <string name="alert_dialog_user_already_saved_message">Please select option</string>
    <string name="alert_dialog_user_login_problem_title">Login problem</string>
    <string name="alert_dialog_user_login_problem_message">Can not login</string>
    <string name="alert_dialog_alert_title">ALERT</string>


    <!-- Spinners -->
    <string name="spinner_marital_status_single">Single</string>
    <string name="spinner_marital_status_married">Married</string>
    <string name="spinner_marital_status_divorced">Divorced</string>
</resources>