<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="org.csystem.app.basicviews.data.service.model.LoginInfoModel"/>
        <import type="org.csystem.app.android.basicviews.MainActivity"/>
        <variable name="loginInfo" type="org.csystem.app.basicviews.data.service.model.LoginInfoModel" />
        <variable name="activity" type="MainActivity" />
        <variable name="buttonLoginEnable" type="boolean" />
        <variable name="anonymousChecked" type="boolean" />
        <variable name="loginLayoutEnable" type="int" />
        <variable name="statusText" type="String" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mainActivityLinearLayoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOn="@string/toggle_visible_text_on"
            android:textOff="@string/toggle_visible_text_off"
            android:onCheckedChanged="@{(_, checked) -> activity.onLoginToggleButtonCheckedChange(checked)}"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{loginLayoutEnable}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:onClick="@{_ -> activity.onTitleTextClicked()}"
                android:text="@string/text_view_login_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{statusText}"
                />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkbox_anonymous_text"
                android:checked="@={anonymousChecked}"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/mainActivityEditTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/edit_text_username_hint"
                    android:text="@={loginInfo.username}"
                    android:inputType="text"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_clear_text"
                    android:layout_weight="3"
                    android:onClick="@{_ -> activity.onClearUsernameTextButtonClicked()}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_password_hint"
                    android:text="@={loginInfo.password}"
                    android:inputType="textPassword"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_clear_text"
                    android:layout_weight="3"
                    android:onClick="@{_ -> activity.onClearPasswordTextButtonClicked()}"/>
            </LinearLayout>

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_accept_text"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                android:onCheckedChanged="@{(_, checked) -> activity.onAcceptSwitchCheckedChange(checked)}"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{buttonLoginEnable}"
                android:text="@string/button_login_text"
                android:onClick="@{_ -> activity.onLoginButtonClicked()}"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_clear_text"
                android:onClick="@{_ -> activity.onClearAllButtonClicked()}"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register_text"
            android:onClick="@{_ -> activity.onRegisterButtonClicked()}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_close_text"
            android:onClick="@{_ -> activity.onCloseButtonClicked()}"/>
    </LinearLayout>
</layout>
