<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterPasswordActivity">

    <TextView
        android:id="@+id/registerPasswordActivityTextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual" />

    <EditText
        android:id="@+id/registerPasswordActivityEditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/edit_text_password_hint"/>

    <EditText
        android:id="@+id/registerPasswordActivityEditTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/edit_text_confirm_password_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_register_text"
        android:onClick="onRegisterButtonClicked"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_close_text"
        android:onClick="onCloseButtonClicked"/>
</LinearLayout>