<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="org.csystem.app.android.basicviews.ManagementActivity"/>
        <variable name="title" type="String"/>
        <variable name="activity" type="ManagementActivity"/>
    </data>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ManagementActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@{title}" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_users_text"
            android:onClick="@{_ -> activity.onUsersButtonClicked()}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_user_operations_text"
            android:onClick="@{_ -> activity.onUserOperationsButtonClicked()}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_close_text"
            android:onClick="@{_ -> activity.onCloseButtonClicked()}"/>
    </LinearLayout>

</layout>
